--- a/package.json
+++ b/package.json
@@ -10,17 +10,30 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.52.3",
+    "the-new-css-reset": "^1.6.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "concurrently": "^7.2.2",
+    "json-server": "^0.17.0",
+    "prettier": "^2.7.1"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm:be-server\" \"npm:fe-server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier -w .",
+    "be-server": "json-server --watch ./db.json --port 8000",
+    "fe-server": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
